add button style, refactor css-theme, fix then on register and auth page

--- a/src/main/resources/static/css/color.css
+++ b/src/main/resources/static/css/color.css
@@ -10,3 +10,13 @@
 
 html { visibility:hidden;
 background: var(--background-color);}
+
+.p-main-color {
+    color: var(--main-color);
+}
+.p-text-color{
+    color: var(--text-color);
+}
+* {
+    font-family: 'Comfortaa', sans-serif;
+}
