--- a/src/main/resources/templates/group.html
+++ b/src/main/resources/templates/group.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <title>IG</title>
-    <link rel="stylesheet" th:href="@{/group.css}"/>
+    <link rel="stylesheet" th:href="@{/css/group.css}"/>
     <link rel="stylesheet" th:href="@{/css/main_layout_items.css}"/>
-    <link rel="stylesheet" th:href="@{/item_list_group.css}"/>
-    <link rel="stylesheet" th:href="@{/item_list_post.css}"/>
-    <link rel="stylesheet" th:href="@{/color.css}"/>
-    <link rel="stylesheet" th:href="@{/header.css}"/>
+    <link rel="stylesheet" th:href="@{/css/item_list_group.css}"/>
+    <link rel="stylesheet" th:href="@{/css/item_list_post.css}"/>
+    <link rel="stylesheet" th:href="@{/css/color.css}"/>
+    <link rel="stylesheet" th:href="@{/css/header.css}"/>
     <!--Картинки-->
     <script src="https://kit.fontawesome.com/9e56eb5395.js" crossorigin="anonymous"></script>
 
@@ -291,15 +291,4 @@
     }
 </script>
 </script>
-<footer role="contentinfo">
-    <div id="site_footer" style="background: black;">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6 col-md-8">
-                    <p style="color: white;">© 2023 Мой сайт. Все права защищены.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-</footer>
 </html>
