--- a/src/main/resources/templates/groups.html
+++ b/src/main/resources/templates/groups.html
@@ -2,11 +2,11 @@
 <html xmlns="http://www.w3.org/1999/html">
 <head>
     <title>IG</title>
-    <link rel="stylesheet" th:href="@{/groups.css}"/>
+    <link rel="stylesheet" th:href="@{/css/groups.css}"/>
     <link rel="stylesheet" th:href="@{/css/main_layout_items.css}"/>
-    <link rel="stylesheet" th:href="@{/item_list_group.css}"/>
-    <link rel="stylesheet" th:href="@{/color.css}"/>
-    <link rel="stylesheet" th:href="@{/header.css}"/>
+    <link rel="stylesheet" th:href="@{/css/item_list_group.css}"/>
+    <link rel="stylesheet" th:href="@{/css/color.css}"/>
+    <link rel="stylesheet" th:href="@{/css/header.css}"/>
     <link rel="stylesheet" th:href="@{/css/search.css}"/>
     <!--Картинки-->
     <script src="https://kit.fontawesome.com/9e56eb5395.js" crossorigin="anonymous"></script>
@@ -89,7 +89,7 @@
                         </div>
                         <div class="col-2">
                             <br/>
-                            <p class="block_p_no_color">Поиск</p>
+                            <p class="block_p_no_color p-main-color">Поиск</p>
                         </div>
                     </div>
                 </div>
@@ -139,7 +139,7 @@
             <div class="block_div" style="margin-left: 50px; height: 600px;">
                 <div class="block_div_no_color">
                     <br/>
-                    <p class="block_p_no_color">Мои сообщества</p>
+                    <p class="block_p_no_color p-main-color">Мои сообщества</p>
                 </div>
                 <hr class="block_line"/>
                 <table style="margin-top: -10px; margin-left: -2px;">
@@ -215,15 +215,4 @@
         document.getElementsByTagName("html")[0].style.visibility = "visible";
     }
 </script>
-<footer role="contentinfo">
-    <div id="site_footer" style="background: black;">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6 col-md-8">
-                    <p style="color: white;">© 2023 Мой сайт. Все права защищены.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-</footer>
 </html>
