--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <title>IG</title>
-    <link rel="stylesheet" th:href="@{/style.css}" />
-    <link rel="stylesheet" th:href="@{/color.css}" />
-    <link rel="stylesheet" th:href="@{/header.css}"/>
+    <link rel="stylesheet" th:href="@{/css/style.css}" />
+    <link rel="stylesheet" th:href="@{/css/color.css}" />
+    <link rel="stylesheet" th:href="@{/css/header.css}"/>
     <link rel="stylesheet" th:href="@{/css/search.css}"/>
     <script type="text/javascript" th:src="@{/js/getThemeFromCookie.js}"></script>
     <!--Картинки-->
@@ -70,15 +70,4 @@
 <body style="background: var(--background-color);">
 
 </body>
-<footer role="contentinfo">
-    <div id="site_footer" style="background: black;">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6 col-md-8">
-                    <p style="color: white;">© 2023 Мой сайт. Все права защищены.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-</footer>
 </html>
