--- a/src/main/resources/templates/authorization.html
+++ b/src/main/resources/templates/authorization.html
@@ -2,12 +2,14 @@
 <html>
 <head>
     <title>IG</title>
-    <link rel="stylesheet" th:href="@{/authorization.css}"/>
+    <link rel="stylesheet" th:href="@{/css/authorization.css}"/>
     <link rel="stylesheet" th:href="@{/css/main_layout_items.css}"/>
-    <link rel="stylesheet" th:href="@{/item_list_group.css}"/>
-    <link rel="stylesheet" th:href="@{/color.css}"/>
-    <link rel="stylesheet" th:href="@{/header.css}"/>
+    <link rel="stylesheet" th:href="@{/css/item_list_group.css}"/>
+    <link rel="stylesheet" th:href="@{/css/color.css}"/>
+    <link rel="stylesheet" th:href="@{/css/header.css}"/>
     <link rel="stylesheet" th:href="@{/css/search.css}"/>
+    <link rel="stylesheet" th:href="@{/css/button.css}"/>
+    <script type="text/javascript" th:src="@{/js/getThemeFromCookie.js}"></script>
     <!--Картинки-->
     <script src="https://kit.fontawesome.com/9e56eb5395.js" crossorigin="anonymous"></script>
 
@@ -75,7 +77,7 @@
 
 <div class="container auth_form" style="align-content: center;">
     <form class="row justify-content-center" id="authForm" method="get">
-        <h2>Авторизация</h2>
+        <h2 class="p-text-color">Авторизация</h2>
         <div class="mb-3 col-12 col-md-6">
             <label for="exampleInputEmail1" class="form-label">Email</label>
             <input required type="email" name="email" class="form-control" id="exampleInputEmail1"
@@ -93,14 +95,13 @@
                    onclick="return show_hide_password('password_', this, 'eye_');"><i id="eye_"
                                                                                       class="fa-solid fa-eye-slash"></i></a>
             </div>
-            <p id="errorMessage"></p>
+            <p id="errorMessage" class="p-text-color"></p>
         </div>
         <div class="w-100"></div>
         <div class="mb-3 col-12 col-md-6">
-            <button type="submit" class="btn btn-secondary"
-                    style="background: var(--main-color); color: var(--second-color);">Войти
+            <button type="submit" class="btn btn-primary">Войти
             </button>
-            <a href="/new">Зарегистрироваться</a>
+            <a href="/new" class="p-text-color">Зарегистрироваться</a>
         </div>
     </form>
 </div>
@@ -163,22 +164,5 @@
         }
         return "";
     }
-
-    window.onload = function () {
-        document.documentElement.style.setProperty('--main-color', getCookie("mainColor"));
-        document.documentElement.style.setProperty('--second-color', getCookie("secondColor"));
-        document.getElementsByTagName("html")[0].style.visibility = "visible";
-    }
 </script>
-<footer>
-    <div id="site_footer" style="background: black;">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6 col-md-8">
-                    <p style="color: white;">© 2023 Мой сайт. Все права защищены.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-</footer>
 </html>
