--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Мой сайт</title>
-    <link rel="stylesheet" th:href="@{/style.css}" />
+    <link rel="stylesheet" th:href="@{/css/style.css}" />
 </head>
 <body>
 <header>
