--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -162,11 +162,11 @@
                                             </div>
                                             <div class="col align-self-center">
                                                 <p class="name_group_item_list" th:text="${group.getName()}"> Имя </p>
-                                                <div class="main_div_item_list">
-                                                    <div class="icon_div_item_list">
+                                                <div class="main_div_group_item_list">
+                                                    <div class="icon_div_group_item_list">
                                                         <i class="fa-solid fa-user"></i></div>
-                                                    <div class="subscribes_div_item_list">
-                                                        <p class="subscribes_p_item_list"
+                                                    <div class="subscribes_div_group_item_list">
+                                                        <p class="subscribes_p_group_item_list"
                                                            th:text="${group.getSubscribes()}"></p>
                                                     </div>
                                                 </div>
