--- a/src/main/resources/templates/groups.html
+++ b/src/main/resources/templates/groups.html
@@ -94,7 +94,7 @@
                     </div>
                 </div>
                 <hr class="block_line"/>
-                <table style="margin-top: -10px; margin-left: -2px;">
+                <table style="margin-top: -17px; margin-left: -2px;" class="scroll">
                     <tbody>
                     <tr th:if="${groups.isEmpty()}">
                         </br>
@@ -113,12 +113,12 @@
                                             </div>
                                             <div class="col align-self-center">
                                                 <p class="name_group_item_list" th:text="${group.getName()}"> Имя </p>
-                                                <div class="main_div_item_list">
-                                                    <div class="icon_div_item_list">
+                                                <div class="main_div_group_item_list">
+                                                    <div class="icon_div_group_item_list">
                                                         <i class="fa-solid fa-user"></i>
                                                     </div>
-                                                    <div class="subscribes_div_item_list">
-                                                        <p class="subscribes_p_item_list"
+                                                    <div class="subscribes_div_group_item_list">
+                                                        <p class="subscribes_p_group_item_list"
                                                            th:text="${group.getSubscribes()}"></p>
                                                     </div>
                                                 </div>
@@ -142,7 +142,7 @@
                     <p class="block_p_no_color p-main-color">Мои сообщества</p>
                 </div>
                 <hr class="block_line"/>
-                <table style="margin-top: -10px; margin-left: -2px;">
+                <table style="margin-top: -17px; margin-left: -2px;" class="scroll">
                     <tbody>
                     <tr th:if="${groups.isEmpty()}">
                         </br>
@@ -161,12 +161,12 @@
                                             </div>
                                             <div class="col align-self-center">
                                                 <p class="name_group_item_list" th:text="${group.getName()}"> Имя </p>
-                                                <div class="main_div_item_list">
-                                                    <div class="icon_div_item_list">
+                                                <div class="main_div_group_item_list">
+                                                    <div class="icon_div_group_item_list">
                                                         <i class="fa-solid fa-user"></i>
                                                     </div>
-                                                    <div class="subscribes_div_item_list">
-                                                        <p class="subscribes_p_item_list"
+                                                    <div class="subscribes_div_group_item_list">
+                                                        <p class="subscribes_p_group_item_list"
                                                            th:text="${group.getSubscribes()}"></p>
                                                     </div>
                                                 </div>
