--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -69,5 +69,16 @@
 </header>
 <body style="background: var(--background-color);">
 
+
+<h1>Зафиксированный элемент</h1>
+<div class="extra"></div>
+
+<div class="wrap">
+    <div class="elem">
+        Элемент
+    </div>
+</div>
+
+
 </body>
 </html>
