--- a/src/main/resources/static/css/item_list_post.css
+++ b/src/main/resources/static/css/item_list_post.css
@@ -1,7 +1,7 @@
-/* Стили для сообщества */
+/* Стили для поста */
 .post_div {
     background: var(--second-color);
-    height: 330px;
+    height: auto;
     margin-top: 30px;
     border-radius: 20px;
 }
@@ -16,3 +16,62 @@
     font-size: 16px;
     text-align: left;
 }
+
+.div_post_item_list {
+    height: 100%;
+    width: 100%;
+    margin-top: 15px;
+    margin-left: 25px;
+    margin-right: 25px;
+    border-radius: 20px;
+    padding: 5px;
+}
+
+.figure_img_post_item_list {
+    object-fit: cover;
+    object-position: center;
+    border-radius: 50%;
+    background: white;
+    height: 80px;
+    width: 80px;
+    border: 3px solid #fff;
+    margin-left: 5px;
+    transition: background ease-out 200ms;
+}
+
+.name_post_item_list {
+    font-size: 20px;
+    margin-top: 10px;
+    margin-left: 60px;
+    text-align: left;
+}
+
+.main_div_post_item_list {
+    display: flex;
+    align-content: center;
+    margin-left: 50px;
+    margin-top: -5px;
+}
+
+.icon_div_post_item_list {
+    width: 5%;
+    align-content: end;
+    margin-top: -3px;
+    margin-right: -3px;
+}
+
+.date_div_post_item_list {
+    width: 15%;
+    align-content: start;
+    margin-left: 11px;
+    font-size: 16px;
+}
+
+.date_p_post_item_list {
+    font-size: 16px;
+    margin-top: -5px;
+    margin-left: 0px;
+    text-align: start;
+}
+
+/* Кнопка лайка */
