--- a/src/main/resources/static/css/group.css
+++ b/src/main/resources/static/css/group.css
@@ -129,3 +129,11 @@ input[type=color]:after {
 input[type="file"] {
     display: none;
 }
+.box {
+    position:relative;
+}
+.bet_time {
+    position:absolute;
+    top:10px;
+    right:10px;
+}
