--- a/src/main/resources/static/css/group.css
+++ b/src/main/resources/static/css/group.css
@@ -32,10 +32,17 @@ a {
     text-align: left;
     margin-top: 0px;
     width: 600px;
-    height: 140px;
-    overflow: auto;
+    height: auto;
+    max-height: 140px;
+    overflow-y: scroll;
 }
-
+.wrapper {
+    position: relative;
+    max-height:100vh;
+    max-width:100vw;
+    overflow-x:hidden;
+    overflow-y: scroll;
+}
 /*Стиль выбора цвета*/
 label {
     font-family: sans-serif;
