--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -19,23 +19,22 @@ a {
     color: inherit;
 }
 
-/* Потом удалить! а вообще это пример прокрутки страницы с элементом,
-который остается на месте*/
-.wrap {
-    background-color: #52ff83ab;
-    width: 90%;
-    height: 2000px;
-    margin: 30px;
+
+
+/* Прокрутка элементов и стили скролла. Нужно изменять height при использовании!!!*/
+.scroll {
+    height: 100px;
+    display: block;
+    overflow-y: auto;
+    white-space: normal;
 }
 
-.elem {
-    background: #6052ff;
-    width: 150px;
-    height: 150px;
-    color: #fcfcfc;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    position: fixed;
-
+::-webkit-scrollbar {
+    width: 1px;
+}
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 1px rgba(0,0,0,0);
+}
+::-webkit-scrollbar-thumb {
+    box-shadow: inset 0 0 1px rgba(0,0,0,0);
 }
