--- a/src/main/resources/templates/groups.html
+++ b/src/main/resources/templates/groups.html
@@ -94,7 +94,7 @@
                     </div>
                 </div>
                 <hr class="block_line"/>
-                <table style="margin-top: -17px; margin-left: -2px; height: 500px;" class="scroll">
+                <table style="margin-top: -17px; margin-left: -2px;" class="scroll">
                     <tbody>
                     <tr th:if="${groups.isEmpty()}">
                         </br>
@@ -142,7 +142,7 @@
                     <p class="block_p_no_color p-main-color">Мои сообщества</p>
                 </div>
                 <hr class="block_line"/>
-                <table style="margin-top: -17px; margin-left: -2px; height: 500px;" class="scroll">
+                <table style="margin-top: -17px; margin-left: -2px;" class="scroll">
                     <tbody>
                     <tr th:if="${myGroups.isEmpty()}">
                         </br>
