--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -4,7 +4,8 @@ header {
     padding: 10px;
     height: 80px;
     float: left;
-}
+    position: fixed;
+    margin-bottom: 50px;}
 *header {
     color: var(--text-color);
 }
