--- a/src/main/resources/static/css/item_list_group.css
+++ b/src/main/resources/static/css/item_list_group.css
@@ -13,10 +13,9 @@
     object-fit: cover;
     object-position: center;
     border-radius: 50%;
-    background: white;
     height: 80px;
     width: 80px;
-    border: 3px solid #fff;
+    border: 3px solid var(--background-color);
     margin-left: 5px;
     transition: background ease-out 200ms;
 }
