--- a/src/main/resources/templates/group.html
+++ b/src/main/resources/templates/group.html
@@ -73,10 +73,13 @@
         </div>
     </div>
 </header>
-<body style="background: var(--background-color);">
+<body class="scroll-container" style="background: var(--background-color);">
+<br/>
+<br/>
+<br/>
 <div class="container text-center">
     <div class="row row-cols-auto">
-        <div class="col-8 scroll" style="height: 660px;">
+        <div class="col-8" style="height: auto;">
             <!--Шапка сообщества-->
             <div class="block_div" style="height: auto;">
                 <div class="block_div_color box">
@@ -105,63 +108,77 @@
                     </div>
                 </form>
             </div>
-
-            <!--Пост-->
-            <div class="block_div" style="padding: 5px 5px 20px; height: auto; margin-bottom: 10px;">
-                <div class="div_post_item_list">
-                    <div class="row">
-                        <div class="col-2 col-md-1">
-                            <img class="figure_img_post_item_list" alt="image" th:src="${group.getAvtar()}"/>
-                        </div>
-                        <div class="col align-self-center" style="margin-left: -30px;">
-                            <p class="name_post_item_list" th:text="${group.getName()}"></p>
-                            <div class="main_div_post_item_list">
-                                <div class="date_div_post_item_list">
-                                    <p class="date_p_post_item_list" th:text="${group.getDateCreate().getDate()}"></p>
+            <table style="height: 100%;" class="scroll">
+                <tbody>
+                <tr th:each="post : ${posts}">
+                    <td>
+                        <!--Пост-->
+                        <div class="block_div" style="padding: 5px 5px 20px; height: auto; margin-bottom: 10px;">
+                            <div class="div_post_item_list">
+                                <div class="row">
+                                    <div class="col-2 col-md-1">
+                                        <img class="figure_img_post_item_list" alt="image"
+                                             th:src="${group.getAvtar()}"/>
+                                    </div>
+                                    <div class="col align-self-center" style="margin-left: -30px;">
+                                        <p class="name_post_item_list" th:text="${group.getName()}"></p>
+                                        <div class="main_div_post_item_list">
+                                            <div class="date_div_post_item_list">
+                                                <p class="date_p_post_item_list" th:text="${post.getDatePublication()}"></p>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
+                                <div class="row">
+                                    <div class="col align-self-center" style="margin-left: 0px;">
+                                        <p style="text-align: start; margin-left: 5px; margin-right: 30px; width: auto; height: auto; max-height:120px; overflow-y: auto;">
+                                            Студия Harebrained Schemes объявила, что 2024 год станет новой главой в её
+                                            истории.
+                                            Команда известна за создание Shadowrun Trilogy и BATTLETECH. Спустя 5 лет
+                                            после работы
+                                            под эгидой Paradox Interactive разработчики вновь стали независимыми, но
+                                            оставили
+                                            издателю права на ряд своих игр.
+
+                                            Прямо сейчас ветераны студии в небольшой команде работают над «совершенно
+                                            новой» игрой.
+                                            В ней существует тесная связь между повествованием и игровыми механиками, а
+                                            разработчики
+                                            не сомневаются в интересе со стороны издателей. Для этого будет сделана
+                                            демоверсия
+                                            новинки, но пока не уточняется, станет ли она общедоступной.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col align-self-center" style="margin-left: 0px;">
+                                        <img style="text-align: start; margin-top: -5px; margin-left: 5px; margin-right: 30px; height: 300px; width: 450px;"
+                                             src="https://newcdn.igromania.ru/articles/pics/tmp/images/2024/1/24/6d3eaa4f-2e64-4858-b5be-cb2e21d3d391.webp"/>
+                                    </div>
+                                </div>
+                                <!--<div class="row" style="margin-top: 20px;">
+                                    <div class="col align-self-center" style="margin-left: 0px;">
+                                        <div class="like-container">
+
+
+
+                                        </div>
+                                    </div>
+                                </div>-->
                             </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col align-self-center" style="margin-left: 0px;">
-                            <p style="text-align: start; margin-left: 5px; margin-right: 30px; width: 780px; height: auto; max-height:120px; overflow-y: auto;">
-                                Студия Harebrained Schemes объявила, что 2024 год станет новой главой в её истории.
-                                Команда известна за создание Shadowrun Trilogy и BATTLETECH. Спустя 5 лет после работы
-                                под эгидой Paradox Interactive разработчики вновь стали независимыми, но оставили
-                                издателю права на ряд своих игр.
-
-                                Прямо сейчас ветераны студии в небольшой команде работают над «совершенно новой» игрой.
-                                В ней существует тесная связь между повествованием и игровыми механиками, а разработчики
-                                не сомневаются в интересе со стороны издателей. Для этого будет сделана демоверсия
-                                новинки, но пока не уточняется, станет ли она общедоступной.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col align-self-center" style="margin-left: 0px;">
-                            <img style="text-align: start; margin-top: -5px; margin-left: 5px; margin-right: 30px; height: 300px; width: 450px;"
-                                 src="https://newcdn.igromania.ru/articles/pics/tmp/images/2024/1/24/6d3eaa4f-2e64-4858-b5be-cb2e21d3d391.webp"/>
-                        </div>
-                    </div>
-                    <!--<div class="row" style="margin-top: 20px;">
-                        <div class="col align-self-center" style="margin-left: 0px;">
-                            <div class="like-container">
-
-
-
-                            </div>
-                        </div>
-                    </div>-->
-                </div>
-            </div>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
         </div>
 
         <div class="col-4">
             <!--Список сообществ-->
-            <div class="block_div" style="margin-left: 50px; height: 600px; ">
-                <div class="block_div_no_color">
+            <div class="block_div" style="margin-top: 50px; margin-left: 50px; height: 500px; position: fixed;">
+                <div class="block_div_no_color" style="margin-top: -15px;">
                     <br/>
-                    <p class="block_p_no_color">Рекомендации</p>
+                    <p class="block_p_no_color p-main-color">Рекомендации</p>
                 </div>
                 <hr class="block_line"/>
                 <table style="margin-top: -17px; margin-left: -2px; height: 500px;" class="scroll">
