--- a/src/main/resources/templates/groups.html
+++ b/src/main/resources/templates/groups.html
@@ -71,6 +71,9 @@
     </div>
 </header>
 <body style="background: var(--background-color);">
+<br/>
+<br/>
+<br/>
 <div class="container text-center">
     <div class="row row-cols-auto">
         <div class="col-8">
@@ -144,6 +147,11 @@
                 <hr class="block_line"/>
                 <table style="margin-top: -17px; margin-left: -2px;" class="scroll">
                     <tbody>
+                    <tr th:if="${userLogin==null}">
+                        </br>
+                        <p style="justify-content: center;">Вы не зарегистрированы</p>
+                    </tr>
+                    <tr th:if="${userLogin!=null}">
                     <tr th:if="${myGroups.isEmpty()}">
                         </br>
                         <p style="justify-content: center;"> Нет сообществ </p>
@@ -176,6 +184,7 @@
                                 </button>
                             </form>
                         </td>
+                    </tr>
                     </tr>
                     </tbody>
                 </table>
